Change requirement to Java 17